[gd_scene load_steps=2 format=3 uid="uid://dncr2dk22o36o"]

[ext_resource type="Script" uid="uid://xf566u0xogi4" path="res://option_menu.gd" id="1_ggsak"]

[node name="option_menu" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_ggsak")

[node name="Panel" type="ColorRect" parent="."]
offset_left = 195.0
offset_top = 120.0
offset_right = 1125.0
offset_bottom = 545.0
color = Color(0.151, 0.338, 0.807, 1)

[node name="SFX" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 4.25
anchor_bottom = 1.675
offset_left = 173.0
offset_top = 204.0
offset_right = -3720.5
offset_bottom = -484.875
text = "SFX"

[node name="Music" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 4.25
anchor_bottom = 1.675
offset_left = 173.0
offset_top = 247.0
offset_right = -3720.5
offset_bottom = -441.875
text = "Music"

[node name="Mouse sensitivity" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 138.0
offset_top = 146.0
offset_right = 272.0
offset_bottom = 169.0
text = "Mouse sensitivity"

[node name="MouseSlider" type="HSlider" parent="Panel"]
layout_mode = 0
offset_left = 338.0
offset_top = 154.0
offset_right = 721.0
offset_bottom = 170.0
min_value = 0.001
max_value = 0.01
step = 0.001
value = 0.001

[node name="SFXSlider" type="HSlider" parent="Panel"]
layout_mode = 0
offset_left = 353.0
offset_top = 209.0
offset_right = 724.0
offset_bottom = 232.0
max_value = 1.0
step = 0.01

[node name="MusicSlider" type="HSlider" parent="Panel"]
layout_mode = 0
offset_left = 353.0
offset_top = 252.0
offset_right = 724.0
offset_bottom = 275.0
max_value = 1.0
step = 0.01

[node name="ConfirmButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 363.0
offset_top = 308.0
offset_right = 434.0
offset_bottom = 339.0
text = "Confirm"
